# ebo-app-factory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  dev_test.py  pyproject.toml
.github/workflows/: build.yml
src/ebo_app_factory/: __about__.py  __init__.py  alarm_builder.py  ebo_xml_builder.py  generate_schneider_uid.py  html_compression_utils.py  html_file_builder.py  modbus_builder.py  schedule_builder.py  xml_app_factory.py  xmlutils.py
tests/: test_alarm_builder.py  test_ebo_xml_builder.py  test_html_file_builder.py  test_modbus_builder.py  test_schedule_builder.py  test_xml_app_factory.py
tests/data/: Emergency Lighting Group ICG-L04M EBO app Export 2024-04-19.xml  Zoneworks XT Hive Controller 1 EBO app Export 2024-04-19.xml  basic_test.html  basic_test_html_ebo.xml  exported html v5.0.3.117 2025-07-10 153354.xml  items.xlsx  output.xml  output_1.xml  output_2.xml  output_3.xml  output_4.xml  output_5.xml  output_6.xml  output_7.xml  output_8.xml
